<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="title_calculator">Calculator</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="name">Jarema Radom</string>
    <string name="index">221036</string>
    <string name="gitrepo">https://github.com/PurestEarth/android_bmi</string>
    <string name="git_desc">Git icon</string>
    <string name="pwr_desc">PWR logo</string>
    <string name="settings_imperial">Imperial units</string>
    <string name="bmi_desc">Your BMI</string>
    <string name="height_input">Your height</string>
    <string name="weight_input">Your body weight</string>
    <string name="weight_hint_kg">Insert weight (kg)</string>
    <string name="height_hint_cm">Insert height (cm)</string>
    <string name="weight_hint_lb">Insert weight (lb)</string>
    <string name="height_hint_ft">Insert height (ft)</string>
    <string name="height_hint_inch">Insert height (inch)</string>
    <string name="bmi_hint">Get BMI</string>

    <string name="bmi_underweight_desc">
        Being underweight can also cause other conditions, in which case it is primary. Severely underweight individuals may have poor physical stamina and a weak immune system, leaving them open to infection. According to Robert E. Black of the Johns Hopkins School of Public Health (JHSPH), "Underweight status … and micronutrient deficiencies also cause decreases in immune and non-immune host def
    <string name="bmi_underweight_workout">Try eating more</string>
    <string name="bmi_normal">
        Your weight is perfectly normal, it doesnt mean youre perfectly healthy but you are not predestined for any weight connected sickness
    </string>
    <string name="bmi_normal_workout">Keep doing whatever you are doing</string>
    <string name="bmi_overweight_workout">Some forklifts</string>
    <string name="bmi_overweight_desc">
...
