<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_bmi"
        android:title="@string/title_calculator" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_about"
        android:title="@string/title_about" />

</menu>

