...
        android:hint="@string/height_hint_ft"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="302dp"
        android:layout_height="307dp"
        android:layout_marginTop="40dp"
        android:autofillHints="@string/bmi_hint"
        android:text="@string/bmi_hint"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/bmi_hint"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="80dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:autofillHints="@string/weight_hint_kg"
        android:ems="10"
        android:hint="@string/weight_hint_kg"
...
