...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6200EE">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="284dp"
        android:layout_height="417dp"
        android:layout_marginTop="12dp"
        android:text="TextView"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="321dp"
        android:layout_height="150dp"
        android:layout_marginStart="153dp"
        android:layout_marginLeft="153dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="153dp"
...
